# yast-country

./: .cvsignore  .gitignore  .rubocop.yml  .travis.yml  .yardopts  MAINTAINER  README  README.markdown  README.md  Rakefile  TECHNICALDEBT.md  VERSION  dropping_kbd_legacy.md  timezone_todo.md  yast2-country.spec.in
.github/workflows/: ci.yml
console/: Makefile.am
console/agents/: cfg_console.scr
console/data/: consolefonts.ycp
console/src/: Console.ycp  Makefile.am
console/test/: Makefile.am  console_test.rb  test_helper.rb
country/: yast2-country.spec.in
keyboard/: Makefile.am
keyboard/agents/: cfg_keyboard.scr  sysconfig_keyboard.scr
keyboard/data/: Makefile.am  keyboard_raw.ycp  keymap2mac.ycp  lang2keyboard.ycp  xkblayout2keyboard.ycp
keyboard/src/: Makefile.am  dialogs.ycp  inst_keyboard.ycp  keyboard.desktop  keyboard.y2cc  keyboard.ycp  keyboard_auto.ycp  keyboard_proposal.ycp
keyboard/src/autoyast-rnc/: keyboard.rnc
keyboard/src/clients/: keyboard.rb  keyboard_auto.rb  keyboard_auto.ycp  keyboard_proposal.rb  keyboard_simple_proposal.rb
keyboard/src/data/: keyboard_raw.ycp  keyboard_raw_opensuse.ycp  keyboards.rb  lang2keyboard.ycp  xkblayout2keyboard.ycp
keyboard/src/desktop/: keyboard.desktop  org.opensuse.yast.Keyboard.desktop
keyboard/src/include/keyboard/: dialogs.rb  dialogs.ycp
keyboard/src/lib/y2_keyboard/: keyboard_layout.rb  keyboard_layout_repository.rb
keyboard/src/lib/y2_keyboard/dialog/: layout_selector.rb
keyboard/src/lib/y2country/: widgets.rb
keyboard/src/lib/y2country/widgets/: keyboard_selection.rb
keyboard/src/lib/y2keyboard/: auto_client.rb  keyboard_layout.rb  keyboard_layout_loader.rb  keyboards.rb
keyboard/src/lib/y2keyboard/clients/: keyboard.rb  keyboard_auto.rb  keyboard_proposal.rb  systemd_keyboard.rb
keyboard/src/lib/y2keyboard/dialogs/: layout_selector.rb
keyboard/src/lib/y2keyboard/strategies/: kb_strategy.rb  systemd_strategy.rb  yast_proposal_strategy.rb
keyboard/src/modules/: Keyboard.rb  Keyboard.ycp  Makefile.am  XF86Keyboard.ycp  XLibAPI.pm
keyboard/src/proposal/: Makefile.am  keyboard_proposal.ycp  keyboard_simple_proposal.ycp  proposal_keyboard.ycp
keyboard/src/scrconf/: etc_vconsole_conf.scr
keyboard/test/: Makefile.am  SCRStub.rb  kb_strategy_spec.rb  keyboard_auto_test.rb  keyboard_layout_loader_spec.rb  keyboard_layout_spec.rb  keyboard_spec.rb  keyboard_spec_helper.rb  keyboard_test.rb  keyboards_spec.rb  layout_selector_spec.rb  systemd_strategy_spec.rb  test_helper.rb  widgets_test.rb
keyboard/testsuite/: .gitignore  Makefile.am
keyboard_rewrite/: .rubocop.yml
keyboard_rewrite/test/: helpers.rb  keyboard_layout_repository_spec.rb  keyboard_layout_spec.rb  keyboard_spec_helper.rb  layout_selector_spec.rb  systemd_strategy_spec.rb  test_helper.rb
language/: Makefile.am
language/agents/: Makefile.am  ag_fvwm2_setlang  cfg_language.scr
language/data/: Makefile.am  country.ycp  country_long.ycp  lang2iso.ycp  language.ycp  language_af_ZA.ycp  language_ar_EG.ycp  language_bg_BG.ycp  language_bn_BD.ycp  language_cs_CZ.ycp  language_da_DK.ycp  language_de_DE.ycp  language_el_GR.ycp  language_en_US.ycp  language_fr_FR.ycp  language_gl_ES.ycp  language_gu_IN.ycp  language_hu_HU.ycp  language_it_IT.ycp  language_ko_KR.ycp  language_lt_LT.ycp  (+14 more)
language/src/: Language.ycp  Makefile.am  inst_language.ycp  language.desktop  language.y2cc  language.ycp  language_auto.ycp  language_simple_proposal.ycp  select_language.ycp  yast-language.desktop
language/src/YaPI/: LANGUAGE.pm
language/src/autoyast-rnc/: language.rnc
language/src/clients/: country_simple_proposal.rb  inst_language.rb  inst_language.ycp  language.rb  language_auto.rb  language_proposal.rb  language_simple_proposal.rb  select_language.rb  select_language.ycp
language/src/data/languages/: language_ar_EG.ycp  language_ast_ES.ycp  language_bs_BA.ycp  language_ca_ES.ycp  language_cy_GB.ycp  language_en_GB.ycp  language_es_ES.ycp  language_et_EE.ycp  language_fa_IR.ycp  language_fi_FI.ycp  language_gl_ES.ycp  language_he_IL.ycp  language_hi_IN.ycp  language_hr_HR.ycp  language_id_ID.ycp  language_ja_JP.ycp  language_km_KH.ycp  language_mk_MK.ycp  language_nb_NO.ycp  language_pa_IN.ycp  language_pt_PT.ycp  language_ru_RU.ycp  language_si_LK.ycp  language_sk_SK.ycp  language_sl_SI.ycp  language_sr_RS.ycp  language_ta_IN.ycp  language_tg_TJ.ycp  language_th_TH.ycp  language_tr_TR.ycp  language_uk_UA.ycp  language_vi_VN.ycp  language_xh_ZA.ycp  language_zh_CN.ycp  language_zu_ZA.ycp
language/src/desktop/: org.opensuse.yast.Language.desktop  yast-language.desktop
language/src/lib/y2country/: language_dbus.rb
language/src/lib/y2country/clients/: language_auto.rb
language/src/lib/y2country/widgets/: language_selection.rb  simple_language_selection.rb
language/src/modules/: Language.rb  Language.ycp  Makefile.am  XF86Path.ycp
language/src/modules/YaPI/: LANGUAGE.pm
language/src/proposal/: Makefile.am  country_simple_proposal.ycp  language_proposal.ycp  language_simple_proposal.ycp  proposal_language.ycp
language/src/scrconf/: sysconfig_language.scr
package/: org.opensuse.yast.modules.yapi.time.policy  yast2-country.changes  yast2-country.spec
t/: keyboard-layouts.t  tap_helper.rb
test/: test_helper.rb
timezone/: Makefile.am
timezone/src/: Makefile.am  Timezone.ycp  dialogs.ycp  inst_timezone.ycp  timezone.desktop  timezone.y2cc  timezone.ycp  timezone_auto.ycp
timezone/src/YaPI/: TIME.pm
timezone/src/autoyast-rnc/: timezone.rnc
timezone/src/clients/: inst_timezone.rb  inst_timezone.ycp  timezone.rb  timezone_auto.rb  timezone_auto.ycp  timezone_ntp.rb  timezone_proposal.rb
timezone/src/data/: lang2tz.ycp  timezone_raw.ycp
timezone/src/desktop/: org.opensuse.yast.Timezone.desktop  timezone.desktop
timezone/src/include/timezone/: dialogs.rb
timezone/src/lib/timezone/: ntp.rb  ntp_adapter.rb
timezone/src/lib/y2country/clients/: timezone_auto.rb
timezone/src/modules/: Timezone.rb  Timezone.ycp
timezone/src/proposal/: Makefile.am  proposal_timezone.ycp  timezone_proposal.ycp
(+176 files in other folders)
