# Sources for country

module_DATA = \
  modules/Language.rb

module1dir = @moduledir@/YaPI
module1_DATA = \
  modules/YaPI/LANGUAGE.pm

client_DATA = \
  clients/language_proposal.rb \
  clients/language.rb \
  clients/language_auto.rb \
  clients/country_simple_proposal.rb \
  clients/inst_language.rb \
  clients/select_language.rb \
  clients/language_simple_proposal.rb

scrconf_DATA = \
  scrconf/sysconfig_language.scr

schemafilesdir = $(schemadir)/autoyast/rnc
schemafiles_DATA = \
  autoyast-rnc/language.rnc

ydatadir = @ydatadir@/languages
ydata_DATA = \
  data/languages/language_pt_PT.ycp \
  data/languages/language_es_ES.ycp \
  data/languages/language_zu_ZA.ycp \
  data/languages/language_sr_RS.ycp \
  data/languages/language_fr_FR.ycp \
  data/languages/language_bn_BD.ycp \
  data/languages/language_da_DK.ycp \
  data/languages/language_lt_LT.ycp \
  data/languages/languages.ycp \
  data/languages/language_nn_NO.ycp \
  data/languages/language_nl_NL.ycp \
  data/languages/language_ja_JP.ycp \
  data/languages/language_km_KH.ycp \
  data/languages/language_hr_HR.ycp \
  data/languages/language_gl_ES.ycp \
  data/languages/language_pl_PL.ycp \
  data/languages/language_hu_HU.ycp \
  data/languages/language_et_EE.ycp \
  data/languages/language_mr_IN.ycp \
  data/languages/language_gu_IN.ycp \
  data/languages/language_hi_IN.ycp \
  data/languages/language_id_ID.ycp \
  data/languages/language_uk_UA.ycp \
  data/languages/language_sk_SK.ycp \
  data/languages/language_tr_TR.ycp \
  data/languages/language_bg_BG.ycp \
  data/languages/language_el_GR.ycp \
  data/languages/language_it_IT.ycp \
  data/languages/language_zh_CN.ycp \
  data/languages/language_ca_ES.ycp \
  data/languages/language_ar_EG.ycp \
  data/languages/language_ro_RO.ycp \
  data/languages/language_sl_SI.ycp \
  data/languages/language_wa_BE.ycp \
  data/languages/language_ta_IN.ycp \
  data/languages/language_fi_FI.ycp \
  data/languages/language_vi_VN.ycp \
  data/languages/language_tg_TJ.ycp \
  data/languages/language_ru_RU.ycp \
  data/languages/language_ko_KR.ycp \
  data/languages/language_nb_NO.ycp \
  data/languages/language_cy_GB.ycp \
  data/languages/language_he_IL.ycp \
  data/languages/language_bs_BA.ycp \
  data/languages/language_en_US.ycp \
  data/languages/language_ast_ES.ycp \
  data/languages/language_cs_CZ.ycp \
  data/languages/language_pa_IN.ycp \
  data/languages/language_pt_BR.ycp \
  data/languages/language_de_DE.ycp \
  data/languages/language_si_LK.ycp \
  data/languages/language_zh_TW.ycp \
  data/languages/language_af_ZA.ycp \
  data/languages/language_xh_ZA.ycp \
  data/languages/language_sv_SE.ycp \
  data/languages/language_mk_MK.ycp \
  data/languages/language_ka_GE.ycp \
  data/languages/language_th_TH.ycp \
  data/languages/language_en_GB.ycp

ylibdir = @ylibdir@/y2country
ylib_DATA = \
  lib/y2country/language_dbus.rb

ywidgetsdir = @ylibdir@/y2country/widgets
ywidgets_DATA = \
	lib/y2country/widgets/language_selection.rb

desktop_DATA = \
  desktop/yast-language.desktop

symbolicdir = @icondir@/hicolor/symbolic/apps
symbolic_DATA = \
  icons/hicolor/symbolic/apps/yast-language-symbolic.svg
scalabledir = @icondir@/hicolor/scalable/apps
scalable_DATA = \
  icons/hicolor/scalable/apps/yast-language.svg

EXTRA_DIST = $(module_DATA) $(module1_DATA) $(client_DATA) $(scrconf_DATA) $(schemafiles_DATA) $(ydata_DATA) $(desktop_DATA) $(ylib_DATA) $(ywidgets_DATA) $(symbolic_DATA) $(scalable_DATA)

include $(top_srcdir)/Makefile.am.common
